@@ -177,6 +177,18 @@ modules/access/attachment.c
 modules/access/avio.h
 modules/access/bluray.c
 modules/access/cdda.c
+modules/access/cloudstorage.cpp
+modules/access/cloudstorage/access.cpp
+modules/access/cloudstorage/access.h
+modules/access/cloudstorage/provider_callback.h
+modules/access/cloudstorage/provider_http.cpp
+modules/access/cloudstorage/provider_httpd.cpp
+modules/access/cloudstorage/provider_httpd.h
+modules/access/cloudstorage/provider_http.h
+modules/access/cloudstorage/provider_http_stream.cpp
+modules/access/cloudstorage/provider_http_stream.h
+modules/access/cloudstorage/services_discovery.cpp
+modules/access/cloudstorage/services_discovery.h
 modules/access/concat.c
 modules/access/dc1394.c
 modules/access/dcp/dcp.cpp
