@@ -56,6 +56,8 @@ Access:
  * New SAT>IP access module, to receive DVB-S via IP networks
  * Improvements on DVB scanning
  * BluRay module can open ISO over network and has full BD-J support
+ * New cloudstorage access module using libcloudstorage supporting cloud
+   services, such as Google Drive, Dropbox and others
 
 Decoder:
  * OMX GPU-zerocopy support for decoding and display on Android using OpenMax IL
